Added validation to add medicine dialog

--- a/app/src/main/res/drawable/notification_ic.xml
+++ b/app/src/main/res/drawable/notification_ic.xml
@@ -91,16 +91,16 @@
   <path
       android:pathData="M960.2,1492.1a15,15 0,0 1,-15 -15v-17.9a111,111 0,0 1,110.9 -110.9h13.5a37.7,37.7 0,1 0,0 -75.4H961a76.1,76.1 0,0 1,0 -152.2h93.7a83.1,83.1 0,0 0,83 -83.1v-29.5a15,15 0,0 1,30 0v29.5a113.2,113.2 0,0 1,-113 113.1H961a46.1,46.1 0,1 0,0 92.2h108.6a67.7,67.7 0,1 1,0 135.4h-13.5a81,81 0,0 0,-80.9 80.9v17.9A15,15 0,0 1,960.2 1492.1Z"
       android:strokeWidth="0.0205"
-      android:fillColor="#246BFDe3a58"
+      android:fillColor="@color/main_color"
       android:strokeColor="#000000"/>
   <path
       android:pathData="M1092.4,1492.1a15,15 0,0 1,-15 -15v-17.9a80.9,80.9 0,0 0,-80.8 -80.9H983a67.7,67.7 0,0 1,0 -135.4h108.6a46.1,46.1 0,1 0,0 -92.2H998a113.2,113.2 0,0 1,-113.1 -113.1v-29.5a15,15 0,0 1,30 0v29.5a83.2,83.2 0,0 0,83.1 83.1h93.6a76.1,76.1 0,1 1,0 152.2H983a37.7,37.7 0,0 0,0 75.4h13.6a110.9,110.9 0,0 1,110.8 110.9v17.9A15,15 0,0 1,1092.4 1492.1Z"
       android:strokeWidth="0.0205"
-      android:fillColor="#246BFDe3a58"
+      android:fillColor="@color/main_color"
       android:strokeColor="#000000"/>
   <path
       android:pathData="M1025,1575.9a30.8,30.8 0,0 1,-30.7 -29.3L954.8,711.1A112.1,112.1 0,0 1,912.7 623c0.2,-60.8 49.9,-111 110.7,-111.9a112.3,112.3 0,0 1,71.8 200l-39.5,835.5A30.8,30.8 0,0 1,1025 1575.9ZM1025,541.1h-1.2c-44.5,0.6 -81,37.4 -81.1,82A82.5,82.5 0,0 0,978 691a15.1,15.1 0,0 1,6.4 11.6l39.9,842.6a0.7,0.7 0,1 0,1.4 0l39.9,-842.6A15.1,15.1 0,0 1,1072 691a82.3,82.3 0,0 0,-47 -149.9Z"
       android:strokeWidth="0.0205"
-      android:fillColor="#246BFDe3a58"
+      android:fillColor="@color/main_color"
       android:strokeColor="#000000"/>
 </vector>
