--- a/app/src/main/res/layout/fragment_patient_medical_history.xml
+++ b/app/src/main/res/layout/fragment_patient_medical_history.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        tools:context=".ui.doctor.home.PatientMedicalHistoryFragment">
+        tools:context=".ui.doctor.home.prescription.patient_medical_history.PatientMedicalHistoryFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
