--- a/app/src/main/res/layout/todays_appointments_list_item.xml
+++ b/app/src/main/res/layout/todays_appointments_list_item.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/poppins_bold"
+            android:gravity="center"
             android:text="Mohamed Mostafa "
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -58,6 +59,7 @@
             android:id="@+id/img_time_today_appointment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_time_today_appointment"
             app:layout_constraintEnd_toStartOf="@+id/tv_time_today_appointment"
             app:layout_constraintHorizontal_bias="0.90"
