Completed save prescription functionality

--- a/app/src/main/res/navigation/doctor_nav_graph.xml
+++ b/app/src/main/res/navigation/doctor_nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/doctorHomeFragment"
         android:name="com.syncdev.shifaa.ui.doctor.home.DoctorHomeFragment"
         android:label="fragment_doctor_home"
-        tools:layout="@layout/fragment_doctor_home" >
+        tools:layout="@layout/fragment_doctor_home">
         <action
             android:id="@+id/action_doctorHomeFragment_to_patientDetailsFragment"
             app:destination="@id/patientDetailsFragment"
@@ -22,7 +22,7 @@
         android:id="@+id/doctorScheduleFragment"
         android:name="com.syncdev.shifaa.ui.doctor.schedule.DoctorScheduleFragment"
         android:label="fragment_doctor_schedule"
-        tools:layout="@layout/fragment_doctor_schedule" >
+        tools:layout="@layout/fragment_doctor_schedule">
         <action
             android:id="@+id/action_doctorScheduleFragment_to_appointmentRequestDetailsFragment"
             app:destination="@id/appointmentRequestDetailsFragment"
@@ -35,7 +35,7 @@
         android:id="@+id/doctorPatientsFragment"
         android:name="com.syncdev.shifaa.ui.doctor.patients.DoctorPatientsFragment"
         android:label="fragment_doctor_patients"
-        tools:layout="@layout/fragment_doctor_patients" >
+        tools:layout="@layout/fragment_doctor_patients">
         <action
             android:id="@+id/action_doctorPatientsFragment_to_appointmentRequestDetailsFragment"
             app:destination="@id/appointmentRequestDetailsFragment"
@@ -53,7 +53,7 @@
         android:id="@+id/doctorProfileFragment"
         android:name="com.syncdev.shifaa.ui.doctor.profile.DoctorProfileFragment"
         android:label="fragment_doctor_profile"
-        tools:layout="@layout/fragment_doctor_profile" >
+        tools:layout="@layout/fragment_doctor_profile">
         <action
             android:id="@+id/action_doctorProfileFragment_to_doctorEditProfileFragment"
             app:destination="@id/doctorEditProfileFragment"
@@ -87,14 +87,14 @@
             app:argType="string" />
         <argument
             android:name="request"
-            app:argType="boolean"
-            android:defaultValue="true" />
+            android:defaultValue="true"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:id="@+id/doctorEditProfileFragment"
         android:name="com.syncdev.shifaa.ui.doctor.profile.edit_profile.DoctorEditProfileFragment"
         android:label="DoctorEditProfileFragment"
-        tools:layout="@layout/fragment_doctor_edit_profile"/>
+        tools:layout="@layout/fragment_doctor_edit_profile" />
     <fragment
         android:id="@+id/patientDetailsFragment"
         android:name="com.syncdev.shifaa.ui.doctor.home.prescription.PatientDetailsFragment"
@@ -107,10 +107,34 @@
             app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/to_right" />
+        <argument
+            android:name="appointmentId"
+            app:argType="string" />
+        <argument
+            android:name="patientId"
+            app:argType="string" />
+        <argument
+            android:name="doctorId"
+            app:argType="string" />
+        <argument
+            android:name="comment"
+            app:argType="string" />
+        <argument
+            android:name="doctorName"
+            app:argType="string" />
+        <argument
+            android:name="doctorEmail"
+            app:argType="string" />
+        <argument
+            android:name="doctorPhone"
+            app:argType="string" />
+        <argument
+            android:name="doctorSpecialty"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/patientMedicalHistoryFragment"
         android:name="com.syncdev.shifaa.ui.doctor.home.prescription.patient_medical_history.PatientMedicalHistoryFragment"
         android:label="PatientMedicalHistoryFragment"
-        tools:layout="@layout/fragment_patient_medical_history"/>
+        tools:layout="@layout/fragment_patient_medical_history" />
 </navigation>
