--- a/app/src/main/res/layout/fragment_patient_medicine.xml
+++ b/app/src/main/res/layout/fragment_patient_medicine.xml
@@ -13,17 +13,50 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/tv_medications_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Medicine"
-            android:textSize="34sp"
-            android:textStyle="bold"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="Medications"
+            android:textColor="@color/black"
+            android:textSize="24sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_calendar_medication"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_medications_title"
+            tools:listitem="@layout/calendar_list_item" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_medications"
+            android:layout_width="409dp"
+            android:layout_height="537dp"
+            android:background="@color/ternary_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            app:layout_constraintTop_toBottomOf="@+id/rv_calendar_medication"
+            tools:listitem="@layout/medication_list_item" />
+
+        <View
+            android:id="@+id/view_horizontal_medication"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:background="#AEB0B1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/rv_calendar_medication"
+            app:layout_constraintTop_toBottomOf="@+id/rv_calendar_medication" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
