--- a/app/src/main/res/layout/update_patient_medical_card_dialog.xml
+++ b/app/src/main/res/layout/update_patient_medical_card_dialog.xml
@@ -13,28 +13,33 @@
         android:layout_height="match_parent"
         android:padding="10dp">
 
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_blood_type_medical_card_update_dialog"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="match_parent"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             app:boxStrokeColor="@color/main_color"
             app:hintEnabled="false"
-            app:hintTextColor="@color/main_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_blood_type_medical_card_update_dialog"
+            <AutoCompleteTextView
+                android:id="@+id/dropdown_menu_blood_type_medical_card_update_dialog"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/poppins_regular"
-                android:hint="Blood Type" />
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins_medium"
+                android:hint="Blood Type"
+                android:inputType="none"
+                android:textColorHint="@color/gray"
+                android:textSize="@dimen/text_size_small" />
         </com.google.android.material.textfield.TextInputLayout>
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_weight_medical_card_update_dialog"
