--- a/app/src/main/res/layout/fragment_doctor_past_patients.xml
+++ b/app/src/main/res/layout/fragment_doctor_past_patients.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_medium"
-            android:text="29 Old patients"
+            android:hint="0 Old Patients"
             android:textColor="@color/gray"
             android:textSize="@dimen/text_size_normal"
             android:textStyle="bold"
@@ -37,5 +37,31 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_past_patients_number"
             tools:listitem="@layout/past_patient_list_item"
             tools:spanCount="2" />
+
+        <ImageView
+            android:id="@+id/iv_no_old_patients"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="100dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_past_patients_number"
+            app:srcCompat="@drawable/no_old_patients" />
+
+        <TextView
+            android:id="@+id/tv_no_old_patients"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:fontFamily="@font/poppins_medium"
+            android:text="You have no previous patients"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_no_old_patients"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
