--- a/app/src/main/res/layout/prescription_report_list_item.xml
+++ b/app/src/main/res/layout/prescription_report_list_item.xml
@@ -4,117 +4,173 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="4dp"
     app:cardCornerRadius="10dp"
-    app:cardElevation="10dp"
-    app:cardUseCompatPadding="true">
+    app:cardElevation="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/tv_doctor_name_title_prescription_report"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Doctor Name:"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tv_specialty_title_prescription_report"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Specialty:"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="@+id/tv_doctor_name_title_prescription_report"
-            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_name_title_prescription_report" />
-
-        <TextView
-            android:id="@+id/tv_date_title_prescription_report"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Date:"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="@+id/tv_specialty_title_prescription_report"
-            app:layout_constraintTop_toBottomOf="@+id/tv_specialty_title_prescription_report" />
-
-        <TextView
-            android:id="@+id/tv_time_title_prescription_report"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/poppins_medium"
-            android:text="Time:"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="@+id/tv_date_title_prescription_report"
-            app:layout_constraintTop_toBottomOf="@+id/tv_date_title_prescription_report" />
-
-        <TextView
             android:id="@+id/tv_doctor_name_prescription_report"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:fontFamily="@font/poppins_bold"
-            android:text="Dr. Ahmed Mohamed"
+            android:hint="Dr. Ahmed Mohamed"
             android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_doctor_name_title_prescription_report"
-            app:layout_constraintStart_toEndOf="@+id/tv_doctor_name_title_prescription_report"
-            app:layout_constraintTop_toTopOf="@+id/tv_doctor_name_title_prescription_report" />
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_doctor_specialty_prescription_report"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="Chest and Respiratory"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="Chest and Respiratory"
             android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_specialty_title_prescription_report"
-            app:layout_constraintStart_toEndOf="@+id/tv_specialty_title_prescription_report"
-            app:layout_constraintTop_toTopOf="@+id/tv_specialty_title_prescription_report" />
+            app:layout_constraintEnd_toEndOf="@+id/tv_doctor_name_prescription_report"
+            app:layout_constraintStart_toStartOf="@+id/tv_doctor_name_prescription_report"
+            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_name_prescription_report" />
 
         <TextView
             android:id="@+id/tv_date_prescription_report"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="16-04-2023"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="19-Jun-2023"
             android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_date_title_prescription_report"
-            app:layout_constraintStart_toEndOf="@+id/tv_date_title_prescription_report"
-            app:layout_constraintTop_toTopOf="@+id/tv_date_title_prescription_report" />
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_date_report"
+            app:layout_constraintStart_toEndOf="@+id/iv_date_report"
+            app:layout_constraintTop_toTopOf="@+id/iv_date_report" />
 
         <TextView
             android:id="@+id/tv_time_prescription_report"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:fontFamily="@font/poppins_bold"
-            android:text="9:30 am"
+            android:layout_marginEnd="2dp"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="9:30 AM"
             android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_time_title_prescription_report"
-            app:layout_constraintStart_toEndOf="@+id/tv_time_title_prescription_report"
-            app:layout_constraintTop_toTopOf="@+id/tv_time_title_prescription_report" />
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_time_report"
+            app:layout_constraintEnd_toStartOf="@+id/iv_time_report"
+            app:layout_constraintTop_toTopOf="@+id/iv_time_report" />
+
+        <TextView
+            android:id="@+id/tv_doctor_email_report"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="memedoc@gmail.com"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/tv_doctor_specialty_prescription_report"
+            app:layout_constraintStart_toStartOf="@+id/tv_doctor_specialty_prescription_report"
+            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_specialty_prescription_report" />
 
         <ImageView
-            android:id="@+id/img_qrcode_prescription_report"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@+id/tv_mail_doctor_report"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginEnd="2dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_doctor_email_report"
+            app:layout_constraintEnd_toStartOf="@+id/tv_doctor_email_report"
+            app:layout_constraintTop_toTopOf="@+id/tv_doctor_email_report"
+            app:srcCompat="@drawable/baseline_mail_outline_24" />
+
+        <TextView
+            android:id="@+id/tv_doctor_phone_report"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="01032165498"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/tv_doctor_email_report"
+            app:layout_constraintStart_toStartOf="@+id/tv_doctor_email_report"
+            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_email_report" />
+
+        <ImageView
+            android:id="@+id/iv_doctor_phone_report"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="2dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_doctor_phone_report"
+            app:layout_constraintEnd_toStartOf="@+id/tv_doctor_phone_report"
+            app:layout_constraintTop_toTopOf="@+id/tv_doctor_phone_report"
+            app:srcCompat="@drawable/baseline_call_24" />
+
+        <ImageView
+            android:id="@+id/iv_date_report"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_phone_report"
+            app:srcCompat="@drawable/appointments"
+            app:tint="#FF979797" />
+
+        <ImageView
+            android:id="@+id/iv_time_report"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_phone_report"
+            app:srcCompat="@drawable/baseline_access_time_24"
+            app:tint="#FF979797" />
+
+        <View
+            android:id="@+id/view_horizontal_report_devider"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:background="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_date_prescription_report" />
+
+        <Button
+            android:id="@+id/btn_dispense_medicine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="32dp"
+            android:background="@drawable/custom_filled_rounded_button"
+            android:text="Dispense Medicine"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_specialty_prescription_report"
-            app:srcCompat="@drawable/qrcode" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_prescreiption_advice" />
+
+        <TextView
+            android:id="@+id/tv_doctor_prescreiption_advice"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="24dp"
+            android:fontFamily="@font/poppins_medium"
+            android:hint="Avoid caffeine and alcohol, which can increase fluid loss. Sip warm liquids. Chicken soup, tea, warm apple juice or other warm liquids can soothe a sore throat and loosen a stuffy nose."
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view_horizontal_report_devider" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
